--- a/scss/page/_contacto.scss
+++ b/scss/page/_contacto.scss
@@ -10,7 +10,7 @@
         width: 197px;
         color: black;
         text-align: center;
-        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+        font-family: $font-gral;
 
         .imgAsesor {
             width: 185px;
