--- a/scss/page/_servicioTecnico.scss
+++ b/scss/page/_servicioTecnico.scss
@@ -14,7 +14,7 @@
     color: white;
     text-align: center;
     font-size: 40px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: $font-gral;
     margin-bottom: 10px;
     padding: 15px;
 
@@ -24,7 +24,7 @@
     background-color: white;
     text-align: center;
     font-size: 40px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: $font-gral;
     margin-bottom: 10px;
     padding: 15px;
 }
