--- a/scss/page/_productos.scss
+++ b/scss/page/_productos.scss
@@ -9,6 +9,12 @@ h2.tituloTienda {
     position: relative;
 }
 
+.linear{
+    background: linear-gradient(to top, red, orange, yellow);
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
 .flexPan {
     @include flex(inherit, inherit, space-evenly, inherit);
 
