--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -1,5 +1,20 @@
 $font-orange: orange;
+
 $light-orange: rgb(238, 193, 111);
+
 $font-gral: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+
 $font-titulo: 'Times New Roman', Times, serif;
+
 $font-sub: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+
+$colores-proyecto:
+white,
+orange,
+rgb(233, 182, 88),
+rgb(245, 173, 245),
+rgb(245, 72, 236),
+rgb(128, 0, 160),
+red,
+yellow,
+
