--- a/css/estilos.css
+++ b/css/estilos.css
@@ -158,6 +158,20 @@ h2.subtituloOferta {
   font-size: 30px;
 }
 
+.linear-cont-top {
+  background: linear-gradient(to top, rgb(188, 245, 188), white);
+}
+
+.linear-cont-bottom {
+  background: linear-gradient(to bottom, rgb(188, 245, 188), white);
+}
+
+form.form-size {
+  width: 70%;
+  height: 450px;
+  margin: 20px;
+}
+
 .textoContacto {
   text-align: center;
 }
@@ -190,6 +204,12 @@ h2.tituloTienda {
   font-size: 45px;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   position: relative;
+}
+
+.linear {
+  background: linear-gradient(to top, red, orange, yellow);
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .flexPan {
@@ -364,6 +384,23 @@ h2.tituloTienda {
 #cuadroCursos .box5 {
   grid-column: 3/5;
   grid-row: 2/3;
+}
+
+.flex-y-gardiente {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: flex-wrap;
+  height: 500px;
+}
+.flex-y-gardiente li {
+  border: solid lightcoral 5px;
+  list-style-type: none;
+}
+.flex-y-gardiente li a {
+  text-decoration: none;
+  color: black;
 }
 
 #footerPadre {
