--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -7,11 +7,9 @@
 @import "./utilities/global";
 
 @import "./components/header";
-@import "./page/main-index";
+@import "./page/home";
 @import "./page/contacto";
 @import "./page/productos";
 @import "./page/servicioTecnico";
 @import "./page/capacitaciones";
 @import "./components/footer";
-
-@import "./utilities/media-Querie";
