--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -1,10 +1,13 @@
+$background: white;
+$color: black;
+
 $font-orange: orange;
 
 $light-orange: rgb(238, 193, 111);
 
-$font-gral: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+$font-gral: 'SF Pro', Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 
-$font-titulo: 'Times New Roman', Times, serif;
+$font-titulo: 'SF Pro', 'Times New Roman', Times, serif;
 
 $font-sub: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 
@@ -16,5 +19,4 @@ rgb(245, 173, 245),
 rgb(245, 72, 236),
 rgb(128, 0, 160),
 red,
-yellow,
-
+yellow;
