--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,42 +1,55 @@
-header {
-    background-color: lightgrey;
+.navigation {
+  @include flex(row, center, space-between, nowrap);
+  position: sticky;
+  left: 0;
+  top: 0;
+  padding: 10px 20px;
+  z-index: 100;
+  background: $background;
+  color: $color;
+
+  .navmark {
+    @include flex(row, center, center, nowrap);
+    gap: 10px;
+    img {
+      height: 50px;
+    }
+    h1 {
+      width: fit-content;
+      padding: 0;
+      margin: 0;
+      font-size: 1.5rem;
+    }
+  }
+
+  .navlinks {
+    @include flex(row, center, center, nowrap);
+    gap: 10px;
+    list-style: none;
+    a {
+      padding: 5px 15px; 
+      border-radius: 5px;
+      text-decoration: none;
+      font-size: 1.2rem;
+      color: black;
+      transition: all 0.5s;
+      &:hover {
+        transform: scale(1.1);
+      }
+      &.active {
+        background: rgba(0,0,0,0.2);
+      }
+    }
+  }
 }
 
-header.positionSticky {
-    position: sticky;
-    top: 0;
-    z-index: 100;
+@include tablet {
+  .navigation {
+    @include flex(column, center, center, nowrap);
+    gap: 20px;
 
-    .headerContainer {
-        display: grid;
-        margin: 0 auto;
-        grid-template-columns: 10% 1fr;
-        grid-template-rows: 2, 1fr;
-
-        .boxLogo {
-            grid-column: 1 / 2;
-            grid-row: 1 /2;
-
-            .iconSize {
-                height: 100px;
-                width: 100px;
-            }
-        }
-
-        .boxTitulo {
-            grid-column: 2 / 3;
-            grid-row: 1 / 2;
-        }
-
-        .boxNav {
-            grid-column: 1 / 3;
-            grid-row: 2 / 3;
-
-            ul.estiloNav :nth-child(1){
-                color: black;
-                font-size: 20px;
-                font-weight: bolder;
-            }
-        }
+    .navlinks {
+      flex-wrap: wrap;
     }
+  }
 }
