--- a/scss/page/_capacitaciones.scss
+++ b/scss/page/_capacitaciones.scss
@@ -4,6 +4,14 @@
     font-style: normal;
     font-size: 90px;
     margin: 15px;
+
+    @include tablet {
+        font-size: 60px;
+    }
+
+    @include mobile {
+        font-size: 30px;
+    }
 }
 
 .padreCapacitaciones {
@@ -23,6 +31,14 @@
         font-style: normal;
         font-size: 35px;
         padding: 15px;
+
+        @include tablet {
+            font-size: 30px;
+        }
+
+        @include mobile {
+            font-size: 10px;
+        }
     }
 }
 
