--- a/scss/page/_productos.scss
+++ b/scss/page/_productos.scss
@@ -1,12 +1,20 @@
 h2.tituloTienda {
     display: flex;
     font-size: 60px;
+
+    @include mobile {
+        display: none;
+    }
 }
 
 .tituloTienda2 {
     font-size: 45px;
     font-family: $font-sub;
     position: relative;
+
+    @include mobile {
+        font-size: 25px;
+    }    
 }
 
 .linear {
@@ -22,6 +30,10 @@ h2.tituloTienda {
         text-align: center;
         width: 400px;
 
+        @include mobile {
+            width: 250px;
+        }
+
         h4.subTarjeta {
             padding: 15px;
             font-family: $font-sub;
@@ -35,6 +47,11 @@ h2.tituloTienda {
             &:hover {
                 transform: translateY(20px);
             }
+
+            @include mobile {
+                padding: 15px;
+                font-size: 18px;
+            }
         }
 
         .fontTarjeta {
@@ -42,9 +59,22 @@ h2.tituloTienda {
             font-family: $font-gral;
             padding: 50px;
 
+            @include mobile {
+                font-size: 10px;
+                padding: 40px;
+            }
+
             .carritoPan {
                 width: 50px;
+                
+                @include mobile {
+                    width: 45px;
+                }
             }
+        }
+
+        img {
+            width: 80px;
         }
     }
 }
@@ -53,6 +83,17 @@ h2.tituloTienda {
     @include flex(inherit, inherit, space-evenly, wrap);
     width: 90vw;
     margin: 40px;
+
+    @include mobile {
+        display: grid;
+        grid-template-columns: 2, 1fr;
+        grid-template-rows: 5, 1fr;
+        row-gap: 10px;
+        column-gap: 10px;
+        width: 25vw;
+        margin: 15px;
+        grid-template-areas: "prod1 prod2" "prod3 prod4" "prod5 prod6" "prod7 prod8" "prod9 prod10";
+    }
 
     .tarjetaProductos {
         padding: 20px;
@@ -71,11 +112,52 @@ h2.tituloTienda {
         &:hover {
             transform: translateY(-15px);
         }
+
+        @include tablet {
+            width: 280px;
+            height: 350px;
+            position: relative;
+            font-size: 10px;
+        
+            .tarjetaImg {
+                width: 210px;
+                height: 150px;
+            }
+            
+            .carrito {
+                width: 25px;
+                position: absolute;
+                right: 5px;
+                bottom: 5px;
+            }
+            
+            .precioTarjeta {
+                position: absolute;
+                left: 7px;
+                bottom: 3px;
+                background-color: lightgrey;
+                padding: 5px;
+                border-radius: 10px;
+                font-size: 12px;
+            }
+        }
+
+        @include mobile {
+            width: 210px;
+            height: 290px;
+            position: relative;
+            font-size: 10px;
+        }
     }
 
     .tarjetaImg {
         width: 250px;
         height: 190px;
+
+        @include mobile {
+            width: 150px;
+            height: 100px;
+        }
     }
 
     .carrito {
@@ -83,6 +165,13 @@ h2.tituloTienda {
         position: absolute;
         right: 5px;
         bottom: 5px;
+
+        @include mobile {
+            width: 10px;
+            position: absolute;
+            right: 2px;
+            bottom: 2px;
+        }
     }
 
     .precioTarjeta {
@@ -92,5 +181,21 @@ h2.tituloTienda {
         background-color: lightgrey;
         padding: 5px;
         border-radius: 10px;
+
+        @include mobile {
+            position: absolute;
+            left: 7px;
+            bottom: 3px;
+            background-color: lightgrey;
+            padding: 5px;
+            border-radius: 10px;
+            font-size: 12px;
+        }
     }
+}
+
+@include mobile {
+  .aclaraciones {
+    display: none;
+  }
 }
