--- a/scss/page/_servicioTecnico.scss
+++ b/scss/page/_servicioTecnico.scss
@@ -7,6 +7,10 @@
 
     .bannerService {
         width: 60vw;
+        
+        @include mobile {
+            width: 55vw;
+        }
     }
 }
 
@@ -18,6 +22,13 @@
     margin-bottom: 10px;
     padding: 15px;
 
+    @include tablet {
+        font-size: 30px;
+    }
+
+    @include mobile {
+        font-size: 15px;
+    }
 }
 
 .parrafoSer2 {
@@ -27,16 +38,36 @@
     font-family: $font-gral;
     margin-bottom: 10px;
     padding: 15px;
+
+    @include tablet {
+        font-size: 30px;
+    }
+
+    @include mobile {
+        font-size: 15px;
+    }
 }
 
 .imgSerCentro {
     display: flex;
     justify-content: space-evenly;
     padding: 25px;
+
+    @include tablet {
+        display: none;
+    }
 }
 
 
 .videoST {
     width: 100%;
     height: 70rem;
+
+    @include tablet {
+        height: 20rem;
+    }
+
+    @include mobile {
+        height: 10rem;
+    }
 }
