--- a/scss/utilities/_mixin.scss
+++ b/scss/utilities/_mixin.scss
@@ -5,3 +5,21 @@
     justify-content: $justify-c;
     flex-wrap: $wrap;
 }
+
+@mixin mobile {
+    @media (max-width: 768px) {
+        @content;
+    }
+}
+
+@mixin tablet {
+    @media (max-width: 1024px) {
+        @content;
+    }
+}
+
+@mixin desktop {
+    @media (min-width: 1025px) {
+        @content;
+    }
+}
