--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -6,7 +6,7 @@
 @import "./utilities/reset";
 @import "./utilities/global";
 
-@import "./components/header";
+@import "./components/navigation";
 @import "./page/home";
 @import "./page/contacto";
 @import "./page/productos";
