--- a/scss/page/_home.scss
+++ b/scss/page/_home.scss
@@ -1,7 +1,3 @@
-.imgNormal img {
-  height: 30rem;
-}
-
 h2.subtituloOferta {
   color: white;
   background-color: black;
@@ -171,4 +167,15 @@ h2.subtituloOferta {
 
 .card {
   margin-bottom: 1px !important;
+}
+
+.carousel {
+  .carousel-control-prev, .carousel-control-next {
+    background: rgba(0,0,0,0.1);
+  }
+  @include tablet {
+    img {
+      height: 30vh;
+    }
+  }
 }
