--- a/scss/page/_contacto.scss
+++ b/scss/page/_contacto.scss
@@ -21,6 +21,7 @@ form.form-size {
     gap: 25px;
     padding-bottom: 25px;
     background: linear-gradient(to top, rgb(188, 245, 188, ), white);
+    margin: 50px;
 
     .tarjetaAsesor {
         border: solid black;
