--- a/css/estilos.css
+++ b/css/estilos.css
@@ -83,11 +83,6 @@ h2 {
 .letraGigante {
   font-size: 150px;
 }
-@media (max-width: 768px) {
-  .letraGigante {
-    font-size: 120px;
-  }
-}
 
 .aclaraciones {
   background-color: lightgrey;
@@ -311,9 +306,12 @@ h2.subtituloOferta {
 .newArrival .verMas {
   font-family: "SF Pro", Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   text-decoration: none;
-  background: #2980B9; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #FFFFFF, #6DD5FA, #2980B9); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #FFFFFF, #6DD5FA, #2980B9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #2980B9;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #FFFFFF, #6DD5FA, #2980B9);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #FFFFFF, #6DD5FA, #2980B9);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: black;
   padding: 10px 20px;
   border-radius: 10px;
@@ -372,7 +370,8 @@ h2.subtituloOferta {
   }
 }
 
-.card, .card img {
+.card,
+.card img {
   border-radius: 0px !important;
   border-bottom-left-radius: 0 !important;
   border-bottom-right-radius: 0 !important;
@@ -384,7 +383,8 @@ h2.subtituloOferta {
   margin-bottom: 1px !important;
 }
 
-.carousel .carousel-control-prev, .carousel .carousel-control-next {
+.carousel .carousel-control-prev,
+.carousel .carousel-control-next {
   background: rgba(0, 0, 0, 0.1);
 }
 @media (max-width: 1024px) {
@@ -420,6 +420,7 @@ form.form-size {
   gap: 25px;
   padding-bottom: 25px;
   background: linear-gradient(to top, rgb(188, 245, 188), white);
+  margin: 50px;
 }
 .tarjetaAsesorPadre .tarjetaAsesor {
   border: solid black;
@@ -479,6 +480,11 @@ h2.tituloTienda {
   background: linear-gradient(to top, rgb(248, 92, 92), rgb(252, 203, 111), rgb(248, 248, 108));
   margin-top: 20px;
   margin-bottom: 20px;
+}
+@media (max-width: 768px) {
+  .linear h2 {
+    font-size: 35px;
+  }
 }
 
 .flexPan {
@@ -547,18 +553,6 @@ h2.tituloTienda {
   flex-wrap: wrap;
   width: 90vw;
   margin: 40px;
-}
-@media (max-width: 768px) {
-  #tiendaContainer {
-    display: grid;
-    grid-template-columns: 2, 1fr;
-    grid-template-rows: 5, 1fr;
-    row-gap: 10px;
-    column-gap: 10px;
-    width: 25vw;
-    margin: 15px;
-    grid-template-areas: "prod1 prod2" "prod3 prod4" "prod5 prod6" "prod7 prod8" "prod9 prod10";
-  }
 }
 #tiendaContainer .tarjetaProductos {
   padding: 20px;
@@ -731,7 +725,7 @@ h2.tituloTienda {
   font-weight: 400;
   font-style: normal;
   font-size: 90px;
-  margin: 15px;
+  margin: 25px;
 }
 @media (max-width: 1024px) {
   .tituloCapacitaciones {
