--- a/scss/page/_home.scss
+++ b/scss/page/_home.scss
@@ -14,54 +14,59 @@ h2.subtituloOferta {
   margin-bottom: 1px;
 
   .letraOferta {
-      font-family: $font-gral;
-      font-size: 22px;
-      padding: 25px;
-      background: rgba(0,0,0,0.5);
+    font-family: $font-gral;
+    font-size: 22px;
+    padding: 25px;
+    background: rgba(0, 0, 0, 0.5);
   }
 
   .images {
-      position: absolute;
-      width: 100%;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    overflow: hidden;
+    z-index: -1;
+
+    img {
+      transform: rotate(-45deg);
       height: 100%;
+    }
+
+    .left {
+      position: absolute;
       top: 0;
-      overflow: hidden;
-      z-index: -1;
-      img {
-        transform: rotate(-45deg);
-        height: 100%;
-      }
-      .left {
-          position: absolute;
-          top: 0;
-          left: 0;
-      }
-      .right {
-          position: absolute;
-          top: 0;
-          right: 0;
-      } 
+      left: 0;
+    }
+
+    .right {
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
   }
 
   a {
-      margin-top: .5rem;
-      font-family: $font-gral;
-      text-decoration: none;
-      background: $color;
-      color: $background;
-      border: 1px solid $background;
-      padding: 10px 20px;
-      border-radius: 10px;
-      &::after {
-          content: '→';
-          margin-left: -13px;
-          opacity: 0;
-          transition: all 0.5s ease;
-      }
-      &:hover::after {
-          opacity: 1;
-          margin-left: 5px;
-      }
+    margin-top: .5rem;
+    font-family: $font-gral;
+    text-decoration: none;
+    background: $color;
+    color: $background;
+    border: 1px solid $background;
+    padding: 10px 20px;
+    border-radius: 10px;
+
+    &::after {
+      content: '→';
+      margin-left: -13px;
+      opacity: 0;
+      transition: all 0.5s ease;
+    }
+
+    &:hover::after {
+      opacity: 1;
+      margin-left: 5px;
+    }
   }
 }
 
@@ -85,24 +90,29 @@ h2.subtituloOferta {
   padding: 30px;
 
   .verMas {
-      font-family: $font-gral;
-      text-decoration: none;
-      background: #2980B9;  /* fallback for old browsers */
-      background: -webkit-linear-gradient(to right, #FFFFFF, #6DD5FA, #2980B9);  /* Chrome 10-25, Safari 5.1-6 */
-      background: linear-gradient(to right, #FFFFFF, #6DD5FA, #2980B9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-      color: $color;
-      padding: 10px 20px;
-      border-radius: 10px;
-      &::after {
-          content: '→';
-          margin-left: -13px;
-          opacity: 0;
-          transition: all 0.5s ease;
-      }
-      &:hover::after {
-          opacity: 1;
-          margin-left: 5px;
-      }
+    font-family: $font-gral;
+    text-decoration: none;
+    background: #2980B9;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #FFFFFF, #6DD5FA, #2980B9);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #FFFFFF, #6DD5FA, #2980B9);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    color: $color;
+    padding: 10px 20px;
+    border-radius: 10px;
+
+    &::after {
+      content: '→';
+      margin-left: -13px;
+      opacity: 0;
+      transition: all 0.5s ease;
+    }
+
+    &:hover::after {
+      opacity: 1;
+      margin-left: 5px;
+    }
   }
 
   img {
@@ -113,7 +123,8 @@ h2.subtituloOferta {
 
   .letraGigante {
     text-shadow: 2px 0 $color, -2px 0 $color, 0 2px $color, 0 -2px $color,
-                 1px 1px $color, -1px -1px $color, 1px -1px $color, -1px 1px $color;
+      1px 1px $color, -1px -1px $color, 1px -1px $color, -1px 1px $color;
+
     &:nth-of-type(1) {
       margin-bottom: -120px
     }
@@ -127,15 +138,19 @@ h2.subtituloOferta {
     .verMas {
       padding: 5px 10px;
     }
+
     .letraGigante {
       font-size: 20vw;
+
       &:nth-of-type(1) {
         margin-bottom: -80px;
       }
+
       &:nth-of-type(2) {
         margin-top: -80px;
       }
     }
+
     img {
       min-width: 200px;
       max-width: 20vh;
@@ -146,10 +161,12 @@ h2.subtituloOferta {
     img {
       min-width: 100px;
     }
+
     .letraGigante {
       &:nth-of-type(1) {
         margin-bottom: -60px;
       }
+
       &:nth-of-type(2) {
         margin-top: -60px;
       }
@@ -157,7 +174,8 @@ h2.subtituloOferta {
   }
 }
 
-.card, .card img {
+.card,
+.card img {
   border-radius: 0px !important;
   border-bottom-left-radius: 0 !important;
   border-bottom-right-radius: 0 !important;
@@ -170,9 +188,12 @@ h2.subtituloOferta {
 }
 
 .carousel {
-  .carousel-control-prev, .carousel-control-next {
-    background: rgba(0,0,0,0.1);
+
+  .carousel-control-prev,
+  .carousel-control-next {
+    background: rgba(0, 0, 0, 0.1);
   }
+
   @include tablet {
     img {
       height: 30vh;
