--- a/css/estilos.css
+++ b/css/estilos.css
@@ -680,6 +680,15 @@ h2.tituloTienda {
   }
 }
 
+.titulo-st {
+  font-size: 80px;
+}
+@media (max-width: 768px) {
+  .titulo-st {
+    font-size: 25px;
+  }
+}
+
 .parrafoSer1 {
   position: relative;
   text-align: center;
